[ADD] User: Added User Database Operations
Added DB Classes for Code-first approach

Configured EF Core Migrations for Database integrations

Added User Repository and Services for Database operations

Temporarily Added UserController for Operation Testing

--- a/ASI.Basecode.Resources/Messages/Errors.resx
+++ b/ASI.Basecode.Resources/Messages/Errors.resx
@@ -123,4 +123,7 @@
   <data name="UserExists" xml:space="preserve">
     <value>UserId already exists!</value>
   </data>
+  <data name="UserNotFound" xml:space="preserve">
+    <value>User is not found!</value>
+  </data>
 </root>
