[FIX] User: Fix User Deletion Behavior
Fixed an issue where active user can delete itself

--- a/Readiculous.Resources/Messages/Errors.resx
+++ b/Readiculous.Resources/Messages/Errors.resx
@@ -141,6 +141,9 @@
   <data name="ServerError" xml:space="preserve">
     <value>Server error occured!</value>
   </data>
+  <data name="UserCannotDeleteSelf" xml:space="preserve">
+    <value>User cannot delete self!</value>
+  </data>
   <data name="UserExists" xml:space="preserve">
     <value>UserId already exists!</value>
   </data>
