--- a/Readiculous.Resources/Messages/Errors.resx
+++ b/Readiculous.Resources/Messages/Errors.resx
@@ -138,6 +138,9 @@
   <data name="ImageFailedToUpload" xml:space="preserve">
     <value>Image failed to upload!</value>
   </data>
+  <data name="IncorrectLoginCredentials" xml:space="preserve">
+    <value>Invalid Email or Password!</value>
+  </data>
   <data name="InvalidCurrentPassword" xml:space="preserve">
     <value>Current Password does not match your current password!</value>
   </data>
